--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,12 @@
   "rules": {
     "prettier/prettier": "error",
     "no-plusplus": "off",
+    "import/extensions": "off",
+    "import/prefer-default-export": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "react/jsx-filename-extension": "off",
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   }
