--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint src -c .eslintrc.json --ext ts,tsx"
   },
   "dependencies": {
     "next": "^10.0.3",
