--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.11",
+    "typed-css-modules": "^0.6.4",
     "typescript": "^4.1.2"
   }
 }
