--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "lint": "eslint src -c .eslintrc.json --ext ts,tsx"
   },
   "dependencies": {
+    "gray-matter": "^4.0.2",
     "next": "^10.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
