--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src -c .eslintrc.json --ext ts,tsx",
-    "fix": "eslint --fix src -c .eslintrc.json --ext ts,tsx"
+    "fix": "eslint --fix src -c .eslintrc.json --ext ts,tsx",
+    "lint:css": "stylelint src/**/*.{scss,css}",
+    "fix:css": "stylelint --fix src/**/*.{scss,css}"
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
@@ -33,6 +35,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0",
     "ts-loader": "^8.0.11",
     "typed-css-modules": "^0.6.4",
     "typescript": "^4.1.2"
