--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint src -c .eslintrc.json --ext ts,tsx",
     "fix": "eslint --fix src -c .eslintrc.json --ext ts,tsx",
     "lint:css": "stylelint src/**/*.{module.css,css}",
-    "fix:css": "stylelint --fix src/**/*.{module.css,css}"
+    "fix:css": "stylelint --fix src/**/*.{module.css,css}",
+    "lint:text": "textlint --config .textlintrc posts/**.md",
+    "fix:text": "textlint --fix --config .textlintrc posts/**.md"
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
@@ -39,6 +41,10 @@
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
+    "textlint": "^11.7.7",
+    "textlint-rule-preset-ja-technical-writing": "^4.0.1",
+    "textlint-rule-preset-jtf-style": "^2.3.6",
+    "textlint-rule-prh": "^5.3.0",
     "ts-loader": "^8.0.11",
     "typed-css-modules": "^0.6.4",
     "typescript": "^4.1.2"
