--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pinst": "^2.1.1",
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
+    "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
     "textlint": "^11.7.7",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
