--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "remark-gfm": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
