--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
     "textlint": "^11.7.7",
+    "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-preset-ja-technical-writing": "^4.0.1",
     "textlint-rule-preset-jtf-style": "^2.3.6",
     "textlint-rule-prh": "^5.3.0",
